Fix various overflow / too-big elements issues on smallest screens (eg iPhone SE)

--- a/src/style/CampaignPage.less
+++ b/src/style/CampaignPage.less
@@ -38,8 +38,8 @@
 		}
 	}
 	
-	#logo-container-curve {
-		display: none;
+	#logo-container-curve, #logo-container-pill {
+		display: none !important;
 	}
 
 	.btn-gl {
