--- a/src/style/navbar.less
+++ b/src/style/navbar.less
@@ -21,4 +21,9 @@
 			box-shadow: none;
 		}
 	}
+
+	// UghhhhhhhhHHHHHHH why is accountmenu coloured inline with a jsx prop but the login-link left with default styling
+	.login-link a {
+		color: white;
+	}
 }
